Fix underscores cut off on relate field

--- a/core/app/shell/src/themes/suite8/css/fields/_relate.scss
+++ b/core/app/shell/src/themes/suite8/css/fields/_relate.scss
@@ -114,7 +114,8 @@
         text-overflow: ellipsis;
         display: table-cell;
         vertical-align: middle;
-        width: 100%
+        width: 100%;
+        height: 16px;
       }
     }
 
